--- a/css/style.css
+++ b/css/style.css
@@ -1,284 +1,193 @@
-@import url(https://fonts.googleapis.com/css?family=Raleway);
-
-*,*:before,*:after { box-sizing: border-box; }
-body { 
-  background: #869F9D; 
-  overflow: hidden;
-}
-h2 {
-  color: #ccc;
-  font-family: "raleway", sans-serif;
-  opacity: 1;  
-  text-align: center;
-  
-  transition: opacity .8s;
-  &.hide {
-    opacity: 0;
-  }
-}
-
-.sand { 
-  background: #B69C77; 
-  height: 30%;
-  position: absolute;
+html {
   width: 100%;
-  z-index: -1;
-  
-  right: 0;
-  bottom: 0;
-  left: 0;
+  height: 100%;
 }
 
-// BB-8
-$d: 140px;
+body {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(-360deg);
+            transform: rotate(-360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(-360deg);
+            transform: rotate(-360deg);
+  }
+}
+@-webkit-keyframes wobble {
+  0% {
+    -webkit-transform: rotate(1.5deg);
+            transform: rotate(1.5deg);
+  }
+  30% {
+    -webkit-transform: rotate(26.25deg);
+            transform: rotate(26.25deg);
+  }
+  50% {
+    -webkit-transform: rotate(21deg);
+            transform: rotate(21deg);
+  }
+  70% {
+    -webkit-transform: rotate(26.25deg);
+            transform: rotate(26.25deg);
+  }
+  100% {
+    -webkit-transform: rotate(1.5deg);
+            transform: rotate(1.5deg);
+  }
+}
+@keyframes wobble {
+  0% {
+    -webkit-transform: rotate(1.5deg);
+            transform: rotate(1.5deg);
+  }
+  30% {
+    -webkit-transform: rotate(26.25deg);
+            transform: rotate(26.25deg);
+  }
+  50% {
+    -webkit-transform: rotate(21deg);
+            transform: rotate(21deg);
+  }
+  70% {
+    -webkit-transform: rotate(26.25deg);
+            transform: rotate(26.25deg);
+  }
+  100% {
+    -webkit-transform: rotate(1.5deg);
+            transform: rotate(1.5deg);
+  }
+}
+.bb8-head, .bb8-head .eye, .bb8-head .eye.little:after, .bb8-body, .bb8-body .port {
+  border-radius: 50%;
+  box-sizing: border-box;
+}
+
+.bb8-head, .bb8-body {
+  border: 1px solid #DDDDDD;
+  background-color: #FFFFFF;
+}
+
+.bb8-head .eye.little:after, .bb8:before, .bb8:after {
+  position: absolute;
+  content: "";
+}
+
 .bb8 {
-  position: absolute;
-  margin-left: -$d/2;
-  width: $d;
-  
-  bottom: 20%;
-  left: 0;
-}
-.antennas {
-  position: absolute;
- 
-  transition: left .6s;
-  
-  left: 22%;
-  
-  &.right {
-    left: 0%;
-  }
-}
-.antenna {
-  background: #e0d2be;
-  position: absolute;
-  width: 2px;
-  
-  &.short {
-    height: 20px;
-    
-    top: -60px;
-    left: 50px;
-  }
-  &.long {
-    border-top: 6px solid #020204;
-    border-bottom: 6px solid #020204;
-    height: 36px;
-    
-    top: -78px;
-    left: 56px;
-  }
-}
-.head {
-  background: #e0d2be;
-  border-radius: 90px 90px 14px 14px;
-  -moz-border-radius: 90px 90px 14px 14px;
-  -webkit-border-radius: 90px 90px 14px 14px;
-  height: 56px;
-  margin-left: -45px;
-  overflow: hidden;
-  position: absolute;
-  width: 90px;
-  z-index: 1;
-  
-  top: -46px;
-  left: 50%;
-  .stripe {
-    position: absolute;
-    width: 100%;    
-  }
-  .stripe.one {
-    background: #999;
-    height: 6px;
-    opacity: .8;
-    z-index: 1;
-    
-    top: 6px;
-  }
-  .stripe.two {
-    background: #CD7640;
-    height: 4px;
-    
-    top: 17px;
-  }
-  .stripe.three {
-    background: #999;
-    height: 4px;
-    opacity: .5;
-    
-    bottom: 3px;
-  }
-  .eyes {
-    display: block;
-    height: 100%;
-    position: absolute;
-    width: 100%;
-    
-    transition: left .6s;
-    
-    left: 0%;
-  }
-  .eyes.right {
-    left: 36%;
-  }
-  .eye {
-    border-radius: 50%;
-    display: block;
-    position: absolute;    
-    
-   
-    &.one {
-      background: #020204;
-      border: 4px solid #e0d2be;
-      height: 30px;
-      width: 30px;
-      
-      top: 12px;
-      left: 12%;
-    }
-    &.one:after {
-      background: white;
-      border-radius: 50%;
-      content: "";
-      display: block;
-      height: 3px;
-      position: absolute;
-      width: 3px;
-      
-      top: 4px;
-      right: 4px;
-    }
-    
-    &.two {
-      background: #e0d2be;
-      border: 1px solid #020204;
-      height: 16px;
-      width: 16px;
-      
-      top: 30px;
-      left: 40%;
-      
-      &:after {
-        background: #020204;
-        border-radius: 50%;
-        content: "";
-        display: block;
-        height: 10px;
-        position: absolute;
-        width: 10px;
-        
-        top: 2px;
-        left: 2px;
-      }
-    }
-  }
-}
-.ball {
-  background: #d1c3ad;
-  border-radius: 50%;
-  height: $d;
-  overflow: hidden;
   position: relative;
-  width: $d;
 }
-.lines {
-  border: 2px solid #B19669;
-  border-radius: 50%;
-  height: 400px;
-  opacity: .6;
+.bb8-head {
+  width: 65px;
+  height: 65px;
   position: absolute;
-  width: 400px;
-  
-  &.two {
-    top: -10px;
-    left: -250px;
-  }
+  left: 17.5px;
+  top: -32.5px;
+  -webkit-transform-origin: 50% 115%;
+          transform-origin: 50% 115%;
+  -webkit-animation: wobble 1.25s ease infinite;
+          animation: wobble 1.25s ease infinite;
 }
-.ring {
-  background: #CD7640;
-  border-radius: 50%;
-  height: 70px;
-  margin-left: -35px;
+.bb8-head .eye {
   position: absolute;
-  width: 70px;
-  &:after {
-    background: #d1c3ad;
-    border-radius: 50%;
-    content: "";
-    display: block;
-    height: 70%;
-    margin-top: -35%;
-    margin-left: -35%;
-    position: absolute;
-    width: 70%;
-    
-    top: 50%;
-    left: 50%;
-  }
-  &.one {
-    margin-left: -40px;
-    height: 80px;
-    width: 90px;
-    
-    top: 6%;
-    left: 50%;
-  }
-  &.two {
-    height: 38px;
-    width: 76px;
-    -ms-transform: rotate(36deg);
-    -webkit-transform: rotate(36deg);
-    transform: rotate(36deg);
-    
-    top: 70%;
-    left: 18%;
-    
-    &:after {
-      top: 100%;
-    }
-  }
-  &.three {
-    height: 30px;
-    -ms-transform: rotate(-50deg);
-    -webkit-transform: rotate(-50deg);
-    transform: rotate(-50deg);
-    
-    top: 66%;
-    left: 90%;
-    
-    &:after {
-      top: 110%;
-    }
-  }
+  background-color: #555555;
 }
-.shadow {
-  background: #3A271C;
-  border-radius: 50%;
-  height: $d/6;
-  opacity: .7;
+.bb8-head .eye.big {
+  width: 16.25px;
+  height: 16.25px;
+  left: 24.375px;
+  top: 8.125px;
+}
+.bb8-head .eye.little {
+  width: 8.125px;
+  height: 8.125px;
+  left: 44.6875px;
+  top: 21.66667px;
+}
+.bb8-head .eye.little:after {
+  width: 12.125px;
+  height: 12.125px;
+  left: -2px;
+  top: -2px;
+  border: 1px solid #555555;
+}
+.bb8-body {
+  width: 100px;
+  height: 100px;
+  position: relative;
+  overflow: hidden;
+  -webkit-animation: spin 0.9s linear infinite;
+          animation: spin 0.9s linear infinite;
+}
+.bb8-body .port {
   position: absolute;
-  width: $d;
-  z-index: -1;
-  
-  left: 5px;
-  bottom: -8px;
+  border: 7px solid #FFA229;
 }
-.shameless {
-  position: absolute;
-  
-  bottom: 10px;
-  right: 10px;
+.bb8-body .port.port-1 {
+  width: 57.14286px;
+  height: 57.14286px;
+  top: -28.57143px;
+  left: 21.42857px;
+  -webkit-transform: rotate(330deg);
+          transform: rotate(330deg);
+  -webkit-transform-origin: 50% 137.5%;
+          transform-origin: 50% 137.5%;
 }
-a {
-  color: #333;
-  font-family: 'Raleway', sans-serif;
-  text-decoration: none;
+.bb8-body .port.port-2 {
+  width: 40px;
+  height: 40px;
+  top: -20px;
+  left: 30px;
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+  -webkit-transform-origin: 50% 175%;
+          transform-origin: 50% 175%;
 }
-a:visited {
-  color: #333;
+.bb8-body .port.port-3 {
+  width: 25px;
+  height: 25px;
+  top: -12.5px;
+  left: 37.5px;
+  -webkit-transform: rotate(230deg);
+          transform: rotate(230deg);
+  -webkit-transform-origin: 50% 250%;
+          transform-origin: 50% 250%;
 }
-a:hover,
-a:focus {
-  color: white;
+.bb8:before {
+  bottom: 0;
+  width: 40px;
+  left: 50px;
+  border-bottom: 1px solid #DDDDDD;
+}
+.bb8:after {
+  bottom: 0;
+  width: 20px;
+  left: 90px;
+  border-bottom: 1px dashed #DDDDDD;
 }
