--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,284 +1,184 @@
-@import url(https://fonts.googleapis.com/css?family=Raleway);
+html {width: 100%; height: 100%;}
+body {width: 100%; height: 100%; display: flex; justify-content: center; align-items: center;}
 
-*,*:before,*:after { box-sizing: border-box; }
-body { 
-  background: #869F9D; 
-  overflow: hidden;
-}
-h2 {
-  color: #ccc;
-  font-family: "raleway", sans-serif;
-  opacity: 1;  
-  text-align: center;
-  
-  transition: opacity .8s;
-  &.hide {
-    opacity: 0;
-  }
+$color-lines: #DDDDDD;
+$color-bb8-main: #FFFFFF;
+$color-bb8-orange: #FFA229;
+$color-bb8-eye: #555555;
+
+@keyframes spin {
+  0% {transform: rotate(0);}
+  100% {transform: rotate(-360deg);}
 }
 
-.sand { 
-  background: #B69C77; 
-  height: 30%;
+@keyframes wobble {
+  $wobble-angle: 15deg;
+  $wobble-leftmost: $wobble-angle * 0.1;
+  $wobble-rightmost: $wobble-angle * 1.75;
+  0% {transform: rotate($wobble-leftmost);}
+  30% {transform: rotate($wobble-rightmost);}
+  50% {transform: rotate($wobble-rightmost * 0.8);}
+  70% {transform: rotate($wobble-rightmost);}
+  100% {transform: rotate($wobble-leftmost);}
+}
+
+%circle {
+  border-radius: 50%;
+  box-sizing: border-box;
+}
+
+%outlined {
+  border: 1px solid $color-lines;
+  background-color: $color-bb8-main;
+}
+
+%stylable-pseudoelement {
   position: absolute;
-  width: 100%;
-  z-index: -1;
-  
-  right: 0;
-  bottom: 0;
-  left: 0;
+  content: "";
 }
 
-// BB-8
-$d: 140px;
+@mixin square ($dim) {
+  width: $dim;
+  height: $dim;
+}
+
+@mixin circular ($diameter) {
+  @extend %circle;
+  @include square($diameter);
+}
+
 .bb8 {
-  position: absolute;
-  margin-left: -$d/2;
-  width: $d;
   
-  bottom: 20%;
-  left: 0;
-}
-.antennas {
-  position: absolute;
- 
-  transition: left .6s;
+  $body-diameter: 100px;
+  $head-diameter: $body-diameter * 0.65;
+  $big-eye-scale-factor: 4;
+  $small-eye-scale-factor: 8;
+  $small-eye-rim-delta: 2px;
+  $port-line-thickness: 0.07 * $body-diameter;
+  $solid-shadow-length-factor: 0.4;
+  $dashed-shadow-length-factor: 0.2;
   
-  left: 22%;
-  
-  &.right {
-    left: 0%;
-  }
-}
-.antenna {
-  background: #e0d2be;
-  position: absolute;
-  width: 2px;
-  
-  &.short {
-    height: 20px;
-    
-    top: -60px;
-    left: 50px;
-  }
-  &.long {
-    border-top: 6px solid #020204;
-    border-bottom: 6px solid #020204;
-    height: 36px;
-    
-    top: -78px;
-    left: 56px;
-  }
-}
-.head {
-  background: #e0d2be;
-  border-radius: 90px 90px 14px 14px;
-  -moz-border-radius: 90px 90px 14px 14px;
-  -webkit-border-radius: 90px 90px 14px 14px;
-  height: 56px;
-  margin-left: -45px;
-  overflow: hidden;
-  position: absolute;
-  width: 90px;
-  z-index: 1;
-  
-  top: -46px;
-  left: 50%;
-  .stripe {
-    position: absolute;
-    width: 100%;    
-  }
-  .stripe.one {
-    background: #999;
-    height: 6px;
-    opacity: .8;
-    z-index: 1;
-    
-    top: 6px;
-  }
-  .stripe.two {
-    background: #CD7640;
-    height: 4px;
-    
-    top: 17px;
-  }
-  .stripe.three {
-    background: #999;
-    height: 4px;
-    opacity: .5;
-    
-    bottom: 3px;
-  }
-  .eyes {
-    display: block;
-    height: 100%;
-    position: absolute;
-    width: 100%;
-    
-    transition: left .6s;
-    
-    left: 0%;
-  }
-  .eyes.right {
-    left: 36%;
-  }
-  .eye {
-    border-radius: 50%;
-    display: block;
-    position: absolute;    
-    
-   
-    &.one {
-      background: #020204;
-      border: 4px solid #e0d2be;
-      height: 30px;
-      width: 30px;
-      
-      top: 12px;
-      left: 12%;
-    }
-    &.one:after {
-      background: white;
-      border-radius: 50%;
-      content: "";
-      display: block;
-      height: 3px;
-      position: absolute;
-      width: 3px;
-      
-      top: 4px;
-      right: 4px;
-    }
-    
-    &.two {
-      background: #e0d2be;
-      border: 1px solid #020204;
-      height: 16px;
-      width: 16px;
-      
-      top: 30px;
-      left: 40%;
-      
-      &:after {
-        background: #020204;
-        border-radius: 50%;
-        content: "";
-        display: block;
-        height: 10px;
-        position: absolute;
-        width: 10px;
-        
-        top: 2px;
-        left: 2px;
-      }
-    }
-  }
-}
-.ball {
-  background: #d1c3ad;
-  border-radius: 50%;
-  height: $d;
-  overflow: hidden;
   position: relative;
-  width: $d;
-}
-.lines {
-  border: 2px solid #B19669;
-  border-radius: 50%;
-  height: 400px;
-  opacity: .6;
-  position: absolute;
-  width: 400px;
   
-  &.two {
-    top: -10px;
-    left: -250px;
-  }
-}
-.ring {
-  background: #CD7640;
-  border-radius: 50%;
-  height: 70px;
-  margin-left: -35px;
-  position: absolute;
-  width: 70px;
-  &:after {
-    background: #d1c3ad;
-    border-radius: 50%;
-    content: "";
-    display: block;
-    height: 70%;
-    margin-top: -35%;
-    margin-left: -35%;
+  &-head {
+    
+    @extend %outlined;
+    @include circular($head-diameter);
+    
     position: absolute;
-    width: 70%;
     
-    top: 50%;
-    left: 50%;
-  }
-  &.one {
-    margin-left: -40px;
-    height: 80px;
-    width: 90px;
+    // When not rotated, sits with center on the top point of the body
+    left: ($body-diameter / 2) - ($head-diameter / 2);
+    top: -$head-diameter / 2;
     
-    top: 6%;
-    left: 50%;
-  }
-  &.two {
-    height: 38px;
-    width: 76px;
-    -ms-transform: rotate(36deg);
-    -webkit-transform: rotate(36deg);
-    transform: rotate(36deg);
+    // Wobbles around the body's center point so it "moves over the body's surface"
+    transform-origin: 50% percentage(0.5 + ($head-diameter / $body-diameter));
+    animation: wobble 1.25s ease infinite;
     
-    top: 70%;
-    left: 18%;
-    
-    &:after {
-      top: 100%;
+    .eye {
+      
+      @extend %circle;
+      position: absolute;
+      
+      background-color: $color-bb8-eye;
+      
+      &.big {
+        
+        $eye-diameter: $head-diameter / $big-eye-scale-factor;
+        @include square($eye-diameter);
+        
+        // Sits horizontally center, a little down
+        left: ($head-diameter / 2) - ($eye-diameter / 2);
+        top: $eye-diameter / 2;
+        
+      }
+      
+      &.little {
+        
+        $eye-diameter: $head-diameter / $small-eye-scale-factor;
+        @include square($eye-diameter);
+        
+        // Sits to the right and down of the big eye
+        left: ($head-diameter * 0.75) - ($eye-diameter / 2);
+        top: $head-diameter / 3;
+        
+        // :after pseudoelement handles the lens rim
+        &:after {
+          
+          @extend %stylable-pseudoelement;
+          @include circular($eye-diameter + (2 * $small-eye-rim-delta));
+          
+          left: -$small-eye-rim-delta;
+          top: -$small-eye-rim-delta;
+          
+          border: 1px solid $color-bb8-eye;
+          
+        }
+        
+      }
+      
     }
+
   }
-  &.three {
-    height: 30px;
-    -ms-transform: rotate(-50deg);
-    -webkit-transform: rotate(-50deg);
-    transform: rotate(-50deg);
+  
+  &-body {
     
-    top: 66%;
-    left: 90%;
+    @include circular($body-diameter);
+    @extend %outlined;
     
-    &:after {
-      top: 110%;
+    position: relative;
+    // Clip sub-circles to border
+    overflow: hidden;
+    
+    // Spinny round
+    animation: spin 0.9s linear infinite;
+    
+    // 'Ports' are the orange round bits on BB-8's body
+    .port {
+      
+      @extend %circle;
+      
+      position: absolute;
+      border: $port-line-thickness solid $color-bb8-orange;
+      
+      // Puts a port of size body / scale at an angle around the circle
+      @mixin port-position($scale, $angle) {
+        @include square($body-diameter / $scale);
+        top: -(0.5 * $body-diameter / $scale);
+        left: 0.5 * $body-diameter * (1 - (1 / $scale));
+        transform: rotate(#{$angle}deg);
+        transform-origin: 50% percentage(($scale + 1) / 2);
+      }
+      
+      // Position and size the ports
+      &.port-1 {
+        @include port-position(1.75, 330);
+      }
+      &.port-2 {
+        @include port-position(2.5, 90);
+      }
+      &.port-3 {
+        @include port-position(4, 230);
+      }
+      
     }
+    
   }
-}
-.shadow {
-  background: #3A271C;
-  border-radius: 50%;
-  height: $d/6;
-  opacity: .7;
-  position: absolute;
-  width: $d;
-  z-index: -1;
   
-  left: 5px;
-  bottom: -8px;
-}
-.shameless {
-  position: absolute;
+  &:before {
+    @extend %stylable-pseudoelement;
+    bottom: 0;
+    width: $body-diameter * $solid-shadow-length-factor;
+    left: $body-diameter * 0.5;
+    border-bottom: 1px solid $color-lines;
+  }
   
-  bottom: 10px;
-  right: 10px;
-}
-a {
-  color: #333;
-  font-family: 'Raleway', sans-serif;
-  text-decoration: none;
-}
-a:visited {
-  color: #333;
-}
-a:hover,
-a:focus {
-  color: white;
+  &:after {
+    @extend %stylable-pseudoelement;
+    bottom: 0;
+    width: $body-diameter * $dashed-shadow-length-factor;
+    left: $body-diameter * (0.5 + $solid-shadow-length-factor);
+    border-bottom: 1px dashed $color-lines;
+  }
+  
 }
